--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "build": "next build && npm run prisma:migrate",
+    "build": "npm run prisma:migrate && next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
